--- a/server/package.json
+++ b/server/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node seeders/index.js"
+    "seed": "node Seeders/index.js"
   },
   "keywords": [],
   "author": "",
